--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -27,9 +27,7 @@
     "\n",
     "If you use the data academically, please cite the original publications, [Youngblut _et al._ (2025)](https://arcinstitute.org/manuscripts/scBaseCount) and [Zhang _et al._ (2025)](https://biorxiv.org/10.1101/2025.02.20.639398).\n",
     "\n",
-    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer).\n",
-    "\n",
-    "If you are not behind a firewall, connect to the public LaminDB instance that mirrors the Arc Virtual Cell Atlas:"
+    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer)."
    ]
   },
   {
@@ -44,31 +42,13 @@
    "outputs": [],
    "source": [
     "# pip install 'lamindb[gcp]'\n",
-    "!lamin connect laminlabs/arc-virtual-cell-atlas"
+    "!lamin init --modules bionty --storage ./test-arc-virtual-cell-atlas"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4",
-   "metadata": {},
-   "source": [
-    "Otherwise, create a local instance to submit queries:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!lamin init --modules bionty --storage ./test-arc-virtual-cell-atlas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
    "metadata": {
     "tags": [
      "hide-output"
@@ -84,9 +64,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "Create the central query object for this instance:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {
     "tags": [
      "hide-output"
@@ -94,13 +82,12 @@
    },
    "outputs": [],
    "source": [
-    "# to conveniently access records of laminlabs/arc-virtual-cell-atlas\n",
     "arc_db = ln.QueryDB(\"laminlabs/arc-virtual-cell-atlas\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "source": [
     "## Tahoe-100M"
@@ -109,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {
     "tags": [
      "hide-output"
@@ -124,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {
     "tags": [
      "hide-output"
@@ -138,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "source": [
     "Every individual dataset in the atlas is an `.h5ad` file that is registered as an artifact in LaminDB.\n",
@@ -149,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {
     "tags": [
      "hide-output"
@@ -166,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "source": [
     "50 cell lines."
@@ -175,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "tags": [
      "hide-output"
@@ -188,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "source": [
     "380 compounds."
@@ -197,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {
     "tags": [
      "hide-output"
@@ -210,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "source": [
     "1,138 perturbations."
@@ -219,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {
     "tags": [
      "hide-output"
@@ -233,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {
     "tags": [
      "hide-output"
@@ -248,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "source": [
     "16 obs metadata features."
@@ -257,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {
     "tags": [
      "hide-output"
@@ -270,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "source": [
     "### Query artifacts of interest based on metadata\n",
@@ -283,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {
     "tags": [
      "hide-output"
@@ -303,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "source": [
     "You can download an `.h5ad` into your local cache:\n",
@@ -320,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "source": [
     "### Open the obs metadata parquet file as a PyArrow Dataset\n",
@@ -331,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {
     "tags": [
      "hide-output"
@@ -348,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {
     "tags": [
      "hide-output"
@@ -362,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "source": [
     "Which A549 cells are perturbed with Piroxicam."
@@ -370,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "source": [
     "```python\n",
@@ -384,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "source": [
     "Retrieve the corresponding cells from h5ad files.\n",
@@ -405,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "source": [
     "## scBaseCount"
@@ -414,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {
     "tags": [
      "hide-output"
@@ -428,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "source": [
     "This project has 105 collections (21 organisms x 5 count features):"
@@ -437,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "33",
    "metadata": {
     "tags": [
      "hide-output"
@@ -450,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "34",
    "metadata": {},
    "source": [
     "### Query artifacts of interest based on metadata\n",
@@ -461,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "35",
    "metadata": {
     "tags": [
      "hide-output"
@@ -478,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "36",
    "metadata": {
     "tags": [
      "hide-output"
@@ -501,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "source": [
     "### Load the h5ad files with obs metadata"
@@ -509,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "38",
    "metadata": {},
    "source": [
     "Load the h5ads as a single AnnData:"
@@ -518,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "39",
    "metadata": {
     "tags": [
      "hide-output"
@@ -537,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "40",
    "metadata": {},
    "source": [
     "Open the sample metadata:"
@@ -546,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "41",
    "metadata": {
     "tags": [
      "hide-output"
@@ -566,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "42",
    "metadata": {
     "tags": [
      "hide-output"
@@ -580,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "43",
    "metadata": {},
    "source": [
     "Fetch corresponding sample metadata:"
@@ -589,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "44",
    "metadata": {
     "tags": [
      "hide-output"
@@ -605,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "45",
    "metadata": {},
    "source": [
     "Add the sample metadata to the AnnData:"
@@ -614,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "46",
    "metadata": {
     "tags": [
      "hide-output"
@@ -631,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "47",
    "metadata": {
     "tags": [
      "hide-output"
