--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -11,16 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [HubMAP (Human BioMolecular Atlas Program) consortium](https://hubmapconsortium.org/) is an initiative mapping human cells to create a comprehensive atlas, with its [Data Portal](https://portal.hubmapconsortium.org/) serving as the platform where researchers can access, visualize, and download (single-cell) tissue data.\n",
+    "The [HubMAP (Human BioMolecular Atlas Program) consortium](https://hubmapconsortium.org/) is an initiative mapping human cells to create a comprehensive atlas, with its [Data Portal](https://portal.hubmapconsortium.org/) serving as the platform where researchers can access, visualize, and download tissue data.\n",
     "\n",
     "Lamin mirrors most of the datasets for simplified access here: [laminlabs/hubmap](https://lamin.ai/laminlabs/hubmap).\n",
     "\n",
     "If you use the data academically, please cite the original publication [Jain et al. 2023](https://www.nature.com/articles/s41556-023-01194-w).\n",
     "\n",
     "Here, we show how the HubMAP instance is structured and how datasets and be queried and accessed.\n",
-    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer).\n",
-    "\n",
-    "If you are not behind a firewall, connect to the public LaminDB instance that mirrors HubMAP:"
+    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer)."
    ]
   },
   {
@@ -34,23 +32,7 @@
    "outputs": [],
    "source": [
     "# pip install lamindb\n",
-    "!lamin connect laminlabs/hubmap"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Otherwise, create a local instance to submit queries:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!lamin init --modules bionty --storage ./test-hubmap"
+    "!lamin init --modules bionty --storage ./test-hubmap"
    ]
   },
   {
@@ -70,12 +52,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the central query object for this instance:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to conveniently access records of laminlabs/hubmap\n",
     "hubmap_db = ln.QueryDB(\"laminlabs/hubmap\")"
    ]
   },
