--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# pip install 'lamindb[gcp]'\n",
-    "!lamin init --modules bionty --storage ./test-arc-virtual-cell-atlas"
+    "!lamin init --modules bionty,wetlab --storage ./test-arc-virtual-cell-atlas"
    ]
   },
   {
