✨ Adopt `QueryDB` for Arc & HubMAP (#224)
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -25,21 +25,15 @@
     "\n",
     "Lamin mirrors the dataset for simplified access here: [laminlabs/arc-virtual-cell-atlas](https://lamin.ai/laminlabs/arc-virtual-cell-atlas).\n",
     "\n",
-    "If you use the data academically, please cite the original publications, [Youngblut _et al._ (2025)](https://arcinstitute.org/manuscripts/scBaseCount) and [Zhang _et al._ (2025)](https://biorxiv.org/10.1101/2025.02.20.639398)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3",
-   "metadata": {},
-   "source": [
-    "Connect to the source instance."
+    "If you use the data academically, please cite the original publications, [Youngblut _et al._ (2025)](https://arcinstitute.org/manuscripts/scBaseCount) and [Zhang _et al._ (2025)](https://biorxiv.org/10.1101/2025.02.20.639398).\n",
+    "\n",
+    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {
     "tags": [
      "hide-output"
@@ -47,26 +41,14 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[wetlab,gcp]'\n",
-    "!lamin connect laminlabs/arc-virtual-cell-atlas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "If you want to transfer artifacts or metadata into your own instance, use `.connect(\"laminlabs/arc-virtual-cell-atlas\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
-    "\n",
-    "```"
+    "# pip install 'lamindb[gcp]'\n",
+    "!lamin init --modules bionty,wetlab --storage ./test-arc-virtual-cell-atlas"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "4",
    "metadata": {
     "tags": [
      "hide-output"
@@ -83,6 +65,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "Create the central query object for this instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "arc_db = ln.QueryDB(\"laminlabs/arc-virtual-cell-atlas\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7",
    "metadata": {},
    "source": [
@@ -93,10 +97,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "project_tahoe = ln.Project.get(name=\"Tahoe-100M\")\n",
+    "project_tahoe = arc_db.projects.get(name=\"Tahoe-100M\")\n",
     "project_tahoe"
    ]
   },
@@ -104,7 +112,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# one collection in this project\n",
@@ -133,7 +145,7 @@
    "outputs": [],
    "source": [
     "# get the collection: https://lamin.ai/laminlabs/arc-virtual-cell-atlas/collection/BpavRL4ntRTzWEE5\n",
-    "collection_tahoe = ln.Collection.get(key=\"tahoe100\")\n",
+    "collection_tahoe = arc_db.collections.get(key=\"tahoe100\")\n",
     "# 14 artifacts in this collection, each correspond to a plate\n",
     "artifacts_tahoe = collection_tahoe.artifacts.distinct()\n",
     "artifacts_tahoe.to_dataframe()"
@@ -151,10 +163,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "artifacts_tahoe.list(\"cell_lines__name\")[:5]"
+    "artifacts_tahoe.to_list(\"cell_lines__name\")[:5]"
    ]
   },
   {
@@ -169,10 +185,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "artifacts_tahoe.list(\"compounds__name\")[:5]"
+    "artifacts_tahoe.to_list(\"compounds__name\")[:5]"
    ]
   },
   {
@@ -187,10 +207,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "artifacts_tahoe.list(\"compound_perturbations__name\")[:5]"
+    "artifacts_tahoe.to_list(\"compound_perturbations__name\")[:5]"
    ]
   },
   {
@@ -206,7 +230,7 @@
    "source": [
     "# check the curated metadata of the first artifact\n",
     "artifact1 = artifacts_tahoe[0]\n",
-    "# artifact1.describe()"
+    "artifact1.describe()"
    ]
   },
   {
@@ -228,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact1.features[\"obs\"].to_dataframe()"
+    "artifact1.features.slots[\"obs\"].members.to_dataframe()"
    ]
   },
   {
@@ -247,12 +271,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# lookup objects give you pythonic access to the values\n",
-    "cell_lines = bt.CellLine.lookup(\"ontology_id\")\n",
-    "drugs = wl.Compound.lookup()\n",
+    "cell_lines = arc_db.cell_lines.lookup(\"ontology_id\")\n",
+    "drugs = arc_db.compounds.lookup()\n",
     "\n",
     "artifacts_a549_piroxicam = artifacts_tahoe.filter(\n",
     "    cell_lines=cell_lines.cvcl_0023, compounds=drugs.piroxicam\n",
@@ -291,10 +319,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "25",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "obs_metadata = ln.Artifact.filter(\n",
+    "obs_metadata = arc_db.artifacts.filter(\n",
     "    key__endswith=\"obs_metadata.parquet\", projects=project_tahoe\n",
     ").one()\n",
     "obs_metadata"
@@ -370,10 +402,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "31",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "project_scbasecount = ln.Project.get(name=\"scBaseCount\")\n",
+    "project_scbasecount = arc_db.projects.get(name=\"scBaseCount\")\n",
     "project_scbasecount"
    ]
   },
@@ -413,13 +449,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "35",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "organisms = bt.Organism.lookup()\n",
-    "tissues = bt.Tissue.lookup()\n",
-    "efos = bt.ExperimentalFactor.lookup()\n",
-    "feature_counts = ln.ULabel.filter(type__name=\"STARsolo count features\").lookup()"
+    "organisms = arc_db.organisms.lookup()\n",
+    "tissues = arc_db.tissues.lookup()\n",
+    "efos = arc_db.experimental_factors.lookup()\n",
+    "feature_counts = arc_db.ulabels.filter(type__name=\"STARsolo count features\").lookup()"
    ]
   },
   {
@@ -433,7 +473,7 @@
    },
    "outputs": [],
    "source": [
-    "h5ads_brain = ln.Artifact.filter(\n",
+    "h5ads_brain = arc_db.artifacts.filter(\n",
     "    suffix=\".h5ad\",\n",
     "    projects=project_scbasecount,\n",
     "    organisms=organisms.human,\n",
@@ -494,16 +534,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "41",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "sample_meta = ln.Artifact.filter(\n",
+    "sample_meta = arc_db.artifacts.filter(\n",
     "    key__endswith=\"sample_metadata.parquet\",\n",
     "    projects=project_scbasecount,\n",
     "    organisms=organisms.human,\n",
     "    ulabels=feature_counts.genefull_ex50pas,\n",
     ").one()\n",
-    "\n",
     "sample_meta"
    ]
   },
@@ -534,7 +577,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "44",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "filter_expr = pc.field(\"srx_accession\").isin(\n",
@@ -555,7 +602,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "46",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata_concat.obs = adata_concat.obs.merge(\n",
@@ -581,7 +632,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
