--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -11,20 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [HubMAP (Human BioMolecular Atlas Program) consortium](https://hubmapconsortium.org/) is an initiative mapping human cells to create a comprehensive atlas, with its [Data Portal](https://portal.hubmapconsortium.org/) serving as the platform where researchers can access, visualize, and download (single-cell) tissue data.\n",
+    "The [HubMAP (Human BioMolecular Atlas Program) consortium](https://hubmapconsortium.org/) is an initiative mapping human cells to create a comprehensive atlas, with its [Data Portal](https://portal.hubmapconsortium.org/) serving as the platform where researchers can access, visualize, and download tissue data.\n",
     "\n",
     "Lamin mirrors most of the datasets for simplified access here: [laminlabs/hubmap](https://lamin.ai/laminlabs/hubmap).\n",
     "\n",
     "If you use the data academically, please cite the original publication [Jain et al. 2023](https://www.nature.com/articles/s41556-023-01194-w).\n",
     "\n",
-    "Here, we show how the HubMAP instance is structured and how datasets and be queried and accessed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Connect to the source instance:"
+    "Here, we show how the HubMAP instance is structured and how datasets and be queried and accessed.\n",
+    "If you'd like to transfer data into your own LaminDB instance, see the [transfer guide](inv:docs#transfer)."
    ]
   },
   {
@@ -38,18 +32,7 @@
    "outputs": [],
    "source": [
     "# pip install lamindb\n",
-    "!lamin connect laminlabs/hubmap"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "If you want to transfer artifacts or metadata into your own instance, use `.connect(\"laminlabs/hubmap\")` when accessing registries and then `.save()` ({doc}`/transfer`).\n",
-    "\n",
-    "```"
+    "!lamin init --modules bionty --storage ./test-hubmap"
    ]
   },
   {
@@ -66,6 +49,22 @@
     "import h5py\n",
     "import anndata as ad\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the central query object for this instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hubmap_db = ln.QueryDB(\"laminlabs/hubmap\")"
    ]
   },
   {
@@ -108,7 +107,9 @@
    },
    "outputs": [],
    "source": [
-    "small_intenstine_collection = ln.Collection.get(key=\"20ee458e5ee361717b68ca72caf6044e\")\n",
+    "small_intenstine_collection = hubmap_db.collections.get(\n",
+    "    key=\"20ee458e5ee361717b68ca72caf6044e\"\n",
+    ")\n",
     "small_intenstine_collection"
    ]
   },
@@ -190,7 +191,7 @@
    "outputs": [],
    "source": [
     "# Get one dataset with a specific type of heart failure\n",
-    "heart_failure_artifact = ln.Artifact.filter(\n",
+    "heart_failure_artifact = hubmap_db.artifacts.filter(\n",
     "    diseases__name=\"heart failure with reduced ejection fraction\"\n",
     ").first()\n",
     "heart_failure_artifact"
@@ -219,7 +220,7 @@
    "source": [
     "```python\n",
     "# Get one placenta tissue dataset:\n",
-    "placenta_data = ln.Artifact.filter(tissues__name=\"placenta\").first().cache()\n",
+    "placenta_data = hubmap_db.artifacts.filter(tissues__name=\"placenta\").first().cache()\n",
     "\n",
     "def load_matrix(group):\n",
     "    values = group[\"block0_values\"][:]\n",
@@ -248,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
