♻️ Migrate to new QueryDB syntax
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -107,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "small_intenstine_collection = hubmap_db.collections.get(\n",
+    "small_intenstine_collection = hubmap_db.Collection.get(\n",
     "    key=\"20ee458e5ee361717b68ca72caf6044e\"\n",
     ")\n",
     "small_intenstine_collection"
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "# Get one dataset with a specific type of heart failure\n",
-    "heart_failure_artifact = hubmap_db.artifacts.filter(\n",
+    "heart_failure_artifact = hubmap_db.Artifact.filter(\n",
     "    diseases__name=\"heart failure with reduced ejection fraction\"\n",
     ").first()\n",
     "heart_failure_artifact"
@@ -220,7 +220,7 @@
    "source": [
     "```python\n",
     "# Get one placenta tissue dataset:\n",
-    "placenta_data = hubmap_db.artifacts.filter(tissues__name=\"placenta\").first().cache()\n",
+    "placenta_data = hubmap_db.Artifact.filter(tissues__name=\"placenta\").first().cache()\n",
     "\n",
     "def load_matrix(group):\n",
     "    values = group[\"block0_values\"][:]\n",
