--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "project_tahoe = arc_db.projects.get(name=\"Tahoe-100M\")\n",
+    "project_tahoe = arc_db.Project.get(name=\"Tahoe-100M\")\n",
     "project_tahoe"
    ]
   },
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "# get the collection: https://lamin.ai/laminlabs/arc-virtual-cell-atlas/collection/BpavRL4ntRTzWEE5\n",
-    "collection_tahoe = arc_db.collections.get(key=\"tahoe100\")\n",
+    "collection_tahoe = arc_db.Collection.get(key=\"tahoe100\")\n",
     "# 14 artifacts in this collection, each correspond to a plate\n",
     "artifacts_tahoe = collection_tahoe.artifacts.distinct()\n",
     "artifacts_tahoe.to_dataframe()"
@@ -279,8 +279,8 @@
    "outputs": [],
    "source": [
     "# lookup objects give you pythonic access to the values\n",
-    "cell_lines = arc_db.cell_lines.lookup(\"ontology_id\")\n",
-    "drugs = arc_db.compounds.lookup()\n",
+    "cell_lines = arc_db.CellLine.lookup(\"ontology_id\")\n",
+    "drugs = arc_db.Compound.lookup()\n",
     "\n",
     "artifacts_a549_piroxicam = artifacts_tahoe.filter(\n",
     "    cell_lines=cell_lines.cvcl_0023, compounds=drugs.piroxicam\n",
@@ -326,7 +326,7 @@
    },
    "outputs": [],
    "source": [
-    "obs_metadata = arc_db.artifacts.filter(\n",
+    "obs_metadata = arc_db.Artifact.filter(\n",
     "    key__endswith=\"obs_metadata.parquet\", projects=project_tahoe\n",
     ").one()\n",
     "obs_metadata"
@@ -409,7 +409,7 @@
    },
    "outputs": [],
    "source": [
-    "project_scbasecount = arc_db.projects.get(name=\"scBaseCount\")\n",
+    "project_scbasecount = arc_db.Project.get(name=\"scBaseCount\")\n",
     "project_scbasecount"
    ]
   },
@@ -456,10 +456,10 @@
    },
    "outputs": [],
    "source": [
-    "organisms = arc_db.organisms.lookup()\n",
-    "tissues = arc_db.tissues.lookup()\n",
-    "efos = arc_db.experimental_factors.lookup()\n",
-    "feature_counts = arc_db.ulabels.filter(type__name=\"STARsolo count features\").lookup()"
+    "organisms = arc_db.Organism.lookup()\n",
+    "tissues = arc_db.Tissue.lookup()\n",
+    "efos = arc_db.ExperimentalFactor.lookup()\n",
+    "feature_counts = arc_db.ULabel.filter(type__name=\"STARsolo count features\").lookup()"
    ]
   },
   {
@@ -473,7 +473,7 @@
    },
    "outputs": [],
    "source": [
-    "h5ads_brain = arc_db.artifacts.filter(\n",
+    "h5ads_brain = arc_db.Artifact.filter(\n",
     "    suffix=\".h5ad\",\n",
     "    projects=project_scbasecount,\n",
     "    organisms=organisms.human,\n",
@@ -541,7 +541,7 @@
    },
    "outputs": [],
    "source": [
-    "sample_meta = arc_db.artifacts.filter(\n",
+    "sample_meta = arc_db.Artifact.filter(\n",
     "    key__endswith=\"sample_metadata.parquet\",\n",
     "    projects=project_scbasecount,\n",
     "    organisms=organisms.human,\n",
