♻️ New QueryDB syntax
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -279,8 +279,8 @@
    "outputs": [],
    "source": [
     "# lookup objects give you pythonic access to the values\n",
-    "cell_lines = arc_db.CellLine.lookup(\"ontology_id\")\n",
-    "drugs = arc_db.Compound.lookup()\n",
+    "cell_lines = arc_db.bionty.CellLine.lookup(\"ontology_id\")\n",
+    "drugs = arc_db.wetlab.Compound.lookup()\n",
     "\n",
     "artifacts_a549_piroxicam = artifacts_tahoe.filter(\n",
     "    cell_lines=cell_lines.cvcl_0023, compounds=drugs.piroxicam\n",
@@ -456,9 +456,9 @@
    },
    "outputs": [],
    "source": [
-    "organisms = arc_db.Organism.lookup()\n",
-    "tissues = arc_db.Tissue.lookup()\n",
-    "efos = arc_db.ExperimentalFactor.lookup()\n",
+    "organisms = arc_db.bionty.Organism.lookup()\n",
+    "tissues = arc_db.bionty.Tissue.lookup()\n",
+    "efos = arc_db.bionty.ExperimentalFactor.lookup()\n",
     "feature_counts = arc_db.ULabel.filter(type__name=\"STARsolo count features\").lookup()"
    ]
   },
