♻️ Refactor data connection syntax for spatial1

--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -133,7 +133,10 @@
    },
    "outputs": [],
    "source": [
-    "all_xenium_data = ln.Artifact.using(\"laminlabs/lamindata\").filter(assay=\"Xenium Spatial Gene Expression\", tissue=\"lung\")\n",
+    "all_xenium_data = (\n",
+    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
+    "    .filter(assay=\"Xenium Spatial Gene Expression\", tissue=\"lung\")\n",
+    ")\n",
     "all_xenium_data.to_dataframe()"
    ]
   },
